tests/machine/x/cpp/partial_application.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

auto add(auto a, auto b) {
	return (a + b);
}

int main() {
	auto add5 = add(5);
	(cout << add5(3));
	return 0;
}
